content tests refactored