@@ -3,10 +3,8 @@ package com.newestworld.content.controller.v1;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.jayway.jsonpath.JsonPath;
 import com.newestworld.commons.exception.ResourceNotFoundException;
-import com.newestworld.commons.model.ModelParameter;
-import com.newestworld.commons.model.ActionType;
 import com.newestworld.content.ContentApplication;
-import com.newestworld.content.dto.*;
+import com.newestworld.content.TestData;
 import com.newestworld.content.service.ActionService;
 import com.newestworld.content.service.ActionStructureService;
 import com.newestworld.streams.event.ActionTimeoutCreateEvent;
@@ -28,7 +26,6 @@ import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import org.springframework.web.context.WebApplicationContext;
 
 import java.lang.reflect.Field;
-import java.util.List;
 
 import static org.mockito.Mockito.mock;
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
@@ -46,7 +43,6 @@ class ActionApiTest {
     private ActionService actionService;
     @Autowired
     private EventPublisher<ActionTimeoutCreateEvent> actionTimeoutCreateEventPublisher;
-
     @Autowired
     private ObjectMapper mapper;
     @Autowired
@@ -61,7 +57,7 @@ class ActionApiTest {
         Field field = ReflectionUtils
                 .findFields(ActionService.class, f -> f.getName().equals("actionTimeoutCreateEventPublisher"),
                         ReflectionUtils.HierarchyTraversalMode.TOP_DOWN)
-                .get(0);
+                .getFirst();
 
         field.setAccessible(true);
         field.set(actionService, actionTimeoutCreateEventPublisher);
@@ -69,72 +65,60 @@ class ActionApiTest {
 
     @Test
     void create() throws Exception {
-        createTestAction();
-        List<ModelParameter> input = List.of(new ModelParameter(3, "$targetId", "1"),
-                new ModelParameter(3, "$amount", "1000"));
+        actionStructureService.create(TestData.actionStructureCreateDTO);
 
         MockHttpServletRequestBuilder requestBuilder = MockMvcRequestBuilders.post("/v1/action")
                 .accept(MediaType.APPLICATION_JSON)
                 .contentType(MediaType.APPLICATION_JSON)
                 .characterEncoding("UTF-8")
-                .content(mapper.writeValueAsString(new ActionCreateDTO("test", List.of(new StructureParameterCreateDTO("$targetId", "1"),
-                        new StructureParameterCreateDTO("$amount", "1000")))));
+                .content(mapper.writeValueAsString(TestData.actionCreateDTO));
 
         mvc.perform(requestBuilder)
                 .andDo(print())
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").exists())
-                .andExpect(jsonPath("$.name").value("test"))
-                .andExpect(jsonPath("$.structureId").exists())
+                .andExpect(jsonPath("$.id").value(TestData.expectedActionId))
+                .andExpect(jsonPath("$.name").value(TestData.actionStructureName))
+                .andExpect(jsonPath("$.structureId").value(TestData.expectedActionStructureId))
                 .andExpect(jsonPath("$.timeout").exists())
                 // I know that sounds bad... *gunshot*
                 // But it refused to work otherwise: https://stackoverflow.com/questions/58306822
                 // I use that everywhere
-                .andExpect(jsonPath("$.input").value(Matchers.equalTo(JsonPath.read(mapper.writeValueAsString(input), "$"))))
+                .andExpect(jsonPath("$.parameters").value(Matchers.equalTo(
+                        JsonPath.read(mapper.writeValueAsString(TestData.expectedActionParameters), "$")
+                )))
                 .andExpect(jsonPath("$.createdAt").exists());
     }
 
     @Test
     void delete() throws Exception {
-        createTestAction();
-        actionService.create(new ActionCreateDTO("test", List.of(new StructureParameterCreateDTO("$targetId", "1"),
-                new StructureParameterCreateDTO("$amount", "1000"))));
+        actionStructureService.create(TestData.actionStructureCreateDTO);
+        actionService.create(TestData.actionCreateDTO);
 
-        MockHttpServletRequestBuilder requestBuilder = MockMvcRequestBuilders.delete("/v1/action/3");
+        MockHttpServletRequestBuilder requestBuilder = MockMvcRequestBuilders.delete("/v1/action/" + TestData.expectedActionId);
 
         mvc.perform(requestBuilder)
                 .andDo(print())
                 .andExpect(status().isOk());
-        Assertions.assertThrows(ResourceNotFoundException.class, () -> actionService.findById(3));
+        Assertions.assertThrows(ResourceNotFoundException.class, () -> actionService.findById(TestData.expectedActionId));
     }
 
     @Test
     void findById() throws Exception {
-        createTestAction();
-        List<ModelParameter> input = List.of(new ModelParameter(3, "$targetId", "1"),
-                new ModelParameter(3, "$amount", "1000"));
-        actionService.create(new ActionCreateDTO("test", List.of(new StructureParameterCreateDTO("$targetId", "1"),
-                new StructureParameterCreateDTO("$amount", "1000"))));
+        actionStructureService.create(TestData.actionStructureCreateDTO);
+        actionService.create(TestData.actionCreateDTO);
 
-        MockHttpServletRequestBuilder requestBuilder = MockMvcRequestBuilders.get("/v1/action/3");
+        MockHttpServletRequestBuilder requestBuilder = MockMvcRequestBuilders.get("/v1/action/" + TestData.expectedActionId);
 
         mvc.perform(requestBuilder)
                 .andDo(print())
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").exists())
-                .andExpect(jsonPath("$.name").value("test"))
-                .andExpect(jsonPath("$.structureId").exists())
+                .andExpect(jsonPath("$.id").value(TestData.expectedActionId))
+                .andExpect(jsonPath("$.name").value(TestData.actionStructureName))
+                .andExpect(jsonPath("$.structureId").value(TestData.expectedActionStructureId))
                 .andExpect(jsonPath("$.timeout").exists())
-                .andExpect(jsonPath("$.input").value(Matchers.equalTo(JsonPath.read(mapper.writeValueAsString(input), "$"))))
+                .andExpect(jsonPath("$.parameters").value(Matchers.equalTo(
+                        JsonPath.read(mapper.writeValueAsString(TestData.expectedActionParameters), "$")
+                )))
                 .andExpect(jsonPath("$.createdAt").exists());
     }
-
-    private void createTestAction()   {
-        String name = "test";
-        List<String> input = List.of("$targetId", "$amount");
-        var start = new NodeCreateDTO(ActionType.START.getId(), 1L, List.of(new StructureParameterCreateDTO("next", "2")));
-        var end = new NodeCreateDTO(ActionType.END.getId(), 2L, List.of());
-        actionStructureService.create(new ActionStructureCreateDTO(name, input, List.of(start, end)));
-    }
-
 }
